--- a/templates/testimonial/new.html.twig
+++ b/templates/testimonial/new.html.twig
@@ -45,7 +45,7 @@ document.addEventListener('DOMContentLoaded', function() {
 							{{ form_row(form.author) }}
 						</div>
 						<div class="form-group style-white2 col-md-6">
-							{{ form_row(form.email) }}
+							{{ form_row(form.firstName) }}
 						</div>
 						<div class="form-group col-md-6">
 							{{ form_row(form.subject) }}
